--- a/app/api/projects/projects.json
+++ b/app/api/projects/projects.json
@@ -24,7 +24,7 @@
             "name" : "KyoeKalay",
             "slug" : "kyoekalay",
             "description" : "Website for mental health care informations. Competed by Team Victory in Hub & Hacks 2023.",
-            "published" : false,
+            "published" : true,
             "deployed" : "render"
         },
         "links" : {
